css/main.scss
body, html {
  background-color:#FCF6F5FF;
}

body, p, input, select, textarea, button {
    font-family: 'Montserrat', sans-serif;
    letter-spacing: -0.2px;
    font-size: 16px;
}

div, p {
  color: #BABECC;
  text-shadow: 1px 1px 1px #FFF;
}

h2 {
  text-align: center;
  color: #990011FF;
}

form, .registerBtn {
  padding: 16px;
  width: 50%;
  margin: 0 auto;
}

.backarrow {
  text-align: center;
  font-size: 50pt;
  position: absolute;
  margin: 0;
  color: #990011FF;
  text-decoration: none;
  padding-bottom: 15px;
}

.backarrow:hover {
  color: #FCF6F5FF;
  background-color: #990011FF;
  border-radius: 50px;
}

#submit_login {
  background-color: #008900;
  color: #FCF6F5FF;
}
 
.nav-part {
  float: left;
  height: 100px;
}

.nav-part2 {
  float: right;
}

#h1-reg, #h2-reg {
  text-align: center;
  color: #990011FF;
}

#h1-index {
  color: #990011FF;
  float: right;
}

.reg-wrapper {
  text-align: center;
}

#password_login, #email_login, .reg {
  box-shadow:  inset 2px 2px 5px #BABECC, inset -5px -5px 10px #FFF;
}

label {
  display: block;
  margin-bottom: 16px*1.5;
  width: 100%;
  color: #990011FF;
}

input, select {
  margin-top: 21px;
  margin-right: 16px/2;
  width: 100%;
  box-sizing: border-box;
  transition: all 0.2s ease-in-out;
  border: 0;
  outline: 0;
  font-size: 16px;
  border-radius: 3.5px;
  padding: 16px;
  background-color:#FCF6F5FF;


  &:focus {
    box-shadow:  inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
  }
}

button {
  text-align: center;
  margin-top: 21px;
  margin-right: 16px/2;
  box-sizing: border-box;
  transition: all 0.2s ease-in-out;
  border: 0;
  outline: 0;
  font-size: 16px;
  border-radius: 16px*20;
  padding: 16px;
  background-color:#990011FF;
  color: #FCF6F5FF;

  &:hover {
    box-shadow: -2px -2px 5px #FFF, 2px 2px 5px #BABECC;
  }

  &:active {
    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
  }


}

.input-group {
  display: flex;
  align-items: center;
  justify-content: flex-start;

  label {
    margin: 0;
    flex: 1;
  }
}

.row {
  padding-top: 150px;
}

#regsub {
  width: 75%;
}

.login-footer {
  background-color: #990011FF;
  margin-top: 100px;
  bottom: 0;
  position: absolute;
  width: 99%;
}

footer ul li {
  color: #FCF6F5FF;
  list-style: none;
  text-align: right;
  margin-right: 50px;
}

footer {
  background-color: #990011FF;
}

header nav ul a {
  float: left;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li {
  float: left;
}

li a {
  display: block;
  color: black;
  text-decoration: none;
  padding: 15px;
  margin: 30px;
  border-right:3px solid black;
}

li a:hover:not(.on) {
  background-color: #990011FF;
  color: #FCF6F5FF;
  transition-duration: 1s;
}

.search-nav {
  padding: 15px;
  margin-top: 0px;
  margin: 30px;
  border-right:3px solid black;
  background-color: white;
}

.logout-nav {
  float: right;
  width: 100px;
}

.img-link {
  height: 100px;
  width: 100px;
}

